--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-
-  <!-- Latest compiled and minified CSS -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Bootstrap 101 Template</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <!--<link rel="icon" href="lib/favicon.ico">-->
 
-  <!-- Bootstrap -->
+  <title>Cover Template for Bootstrap</title>
+
+  <!-- Bootstrap core CSS -->
   <link href="lib/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="lib/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="cover.css" rel="stylesheet">
+
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]>
+  <script src="lib/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="lib/js/ie-emulation-modes-warning.js"></script>
+  <script src="lib/js/jquery-3.1.1.min.js"></script>
+
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -24,58 +37,126 @@
     var TotalSeconds;
     var Wasters_1;
 
+    $(document).ready(function () {
+      CreateTimer("timer", 0, 1);
+    });
+
 
     function CreateTimer(TimerID, Time, Wasters) {
-      Timer = document.getElementById(TimerID);
+
+      Timer = $('#' + TimerID + '');
+
       TotalSeconds = Time;
       Wasters_1 = Wasters;
 
       UpdateTimer();
-      window.setTimeout("Tick()", 1000);
+      setTimeout(function () {
+        Tick()
+      }, 1000);
+    }
+
+    function watersAdd() {
+      var wastersCount = $('#wastersCount');
+      var wasters = parseInt(wastersCount.text());
+
+      wasters += 1;
+      wastersCount.text(wasters);
+
+      var fontSize = parseInt(wastersCount.css('font-size'));
+      if (fontSize < 80) {
+        wastersCount.css('font-size', ++fontSize + 'px');
+      }
+
+      updateTick();
+    }
+
+    function wastersRemove() {
+      var wastersCount = $('#wastersCount');
+      var wasters = parseInt(wastersCount.text());
+
+      if (wasters > 1) {
+        wasters -= 1;
+        wastersCount.text(wasters);
+      }
+
+      var fontSize = parseInt(wastersCount.css('font-size'));
+      if (fontSize > 16) {
+        wastersCount.css('font-size', --fontSize + 'px');
+      }
+
+      updateTick();
     }
 
     function updateTick() {
-      Wasters_1 = parseInt(document.getElementById('wastersCount').value);
+      Wasters_1 = parseInt($('#wastersCount').text());
     }
 
     function Tick() {
-
-      var counter = Wasters_1;
-
-      TotalSeconds += counter;
+      TotalSeconds += Wasters_1;
       UpdateTimer();
-      window.setTimeout("Tick()", 1000);
+      setTimeout(function () {
+        Tick()
+      }, 1000);
     }
 
     function UpdateTimer() {
-
-//      var TotalSeconds = new Date().getTime() / 1000;
-      var hours = parseInt( TotalSeconds / 3600 ) % 24;
-      var minutes = parseInt( TotalSeconds / 60 ) % 60;
+      var hours = parseInt(TotalSeconds / 3600) % 24;
+      var minutes = parseInt(TotalSeconds / 60) % 60;
       var seconds = TotalSeconds % 60;
 
-      var result = (hours < 10 ? "0" + hours : hours) + " hh " + (minutes < 10 ? "0" + minutes : minutes) + " mm " + (seconds  < 10 ? "0" + seconds : seconds);
+      var result = (hours < 10 ? "0" + hours : hours) + " : " + (minutes < 10 ? "0" + minutes : minutes) + " : " + (seconds < 10 ? "0" + seconds : seconds) + " sec";
 
-      Timer.innerHTML = result;
+      Timer.text(result);
     }
   </script>
 </head>
+
 <body>
 
+<div class="site-wrapper">
+
+  <div class="site-wrapper-inner">
+
+    <div class="cover-container">
+
+      <div class="masthead clearfix">
+        <div class="inner">
+          <h3 class="masthead-brand"><font style="color: red">W</font>TC</h3>
+          <nav>
+            <ul class="nav masthead-nav">
+              <li class="active"><a href="#">Go Home! You are <font style="color: red">wasting</font> your time</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+
+      <div class="inner cover">
+        <h1 class="cover-heading"><font style="color: red">Waste</font> Time Counter.</h1>
+        <p class="lead">Let's <font style="color: red">waste</font> together!</p>
+
+        <p>Number Of <font style="color: red">Wasters</font></p>
+        <p id="wastersCount" style="color:white;font-size: 16px;">1</p>
+
+        <div class="row">
+          <p id="timer" style="font-size: 26px;">TIMER</p>
+        </div>
+
+        <p class="lead">
+          <a href="#" id="wastersClick" class="btn btn-lg btn-default" onclick="watersAdd();">MORE <font style="color: red">Wasters</font></a>
+          <a href="#" id="wastersRemove" class="btn btn-lg btn-default" onclick="wastersRemove();">Leave <font style="color: red">Wasters</font> alone</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script>window.jQuery || document.write('<script src="lib/js/vendor/jquery.min.js"><\/script>')</script>
 <script src="lib/js/bootstrap.min.js"></script>
-
-<h1>Waste Time Counter</h1>
-
-<p>Number Of Wasters</p>
-<input type="text" id="wastersCount" value="1"/>
-<button type="button" id="wastersClick" onclick="updateTick()">Click Me!</button>
-
-<div id='timer'/>
-<script type="text/javascript">
-  window.onload = CreateTimer("timer", 0, 1);
-</script>
-
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="lib/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
