--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <!--<link rel="icon" href="lib/favicon.ico">-->
 
-  <title>Cover Template for Bootstrap</title>
+  <title>Waste Time Counter</title>
 
   <!-- Bootstrap core CSS -->
   <link href="lib/css/bootstrap.min.css" rel="stylesheet">
