--- a/index.html
+++ b/index.html
@@ -33,18 +33,6 @@
         var Wasters_1;
         $(document).ready(function () {
             CreateTimer("timer", 0, 1);
-            OAuth.initialize('NfEz4mgOar2krAGSUVlWg9a65pk');
-            OAuth.popup('facebook').done(function (result) {
-                $.getJSON('https://graph.facebook.com/me?access_token=' + result.access_token, function (data) {
-                    var id = data.id;
-                    var name = data.name;
-                    $('#waster').text(name);
-                });
-                //use result.access_token in your API request
-                //or use result.get|post|put|del|patch|me methods (see below)
-            }).fail(function (err) {
-                //handle error with err
-            });
         });
 
         function CreateTimer(TimerID, Time, Wasters) {
@@ -102,10 +90,71 @@
             var result = (hours < 10 ? "0" + hours : hours) + " : " + (minutes < 10 ? "0" + minutes : minutes) + " : " + (seconds < 10 ? "0" + seconds : seconds) + " sec";
             Timer.text(result);
         }
+
+        function updateWasterName(response) {
+            var token = response.authResponse.accessToken;
+            var userID = response.authResponse.userID;
+            $.getJSON('https://graph.facebook.com/me?access_token=' + token, function (data) {
+                var id = data.id;
+                var name = data.name;
+                $('#waster').text(name);
+            });
+        }
+
+        function getStatus() {
+            FB.getLoginStatus(function (response) {
+                if (response.status === 'connected') {
+                    console.log('Logged in.');
+                    updateWasterName(response);
+                }
+                else {
+                    FB.login(function (response) {
+                        if (response.status === 'connected') {
+                            // Logged into your app and Facebook.
+                            updateWasterName(response);
+                        }
+                        else if (response.status === 'not_authorized') {
+                            // The person is logged into Facebook, but not your app.
+                        }
+                        else {
+                            // The person is not logged into Facebook, so we're not sure if
+                            // they are logged into this app or not.
+                        }
+                    }, {
+                        scope: 'public_profile,email'
+                    });
+                }
+            });
+        }
+
+        function initFacebook() {
+            window.fbAsyncInit = function () {
+                FB.init({
+                    appId: '721252094718156'
+                    , xfbml: true
+                    , version: 'v2.8'
+                });
+                FB.AppEvents.logPageView();
+                getStatus();
+            };
+            (function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) {
+                    return;
+                }
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "//connect.facebook.net/en_US/sdk.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        }
     </script>
 </head>
 
 <body>
+    <script>
+        initFacebook();
+    </script>
     <div class="site-wrapper">
         <div class="site-wrapper-inner">
             <div class="cover-container">
