--- a/index.html
+++ b/index.html
@@ -110,15 +110,13 @@
                 else {
                     FB.login(function (response) {
                         if (response.status === 'connected') {
-                            // Logged into your app and Facebook.
                             updateWasterName(response);
                         }
                         else if (response.status === 'not_authorized') {
-                            // The person is logged into Facebook, but not your app.
+                            console.log('not_authorized');
                         }
                         else {
-                            // The person is not logged into Facebook, so we're not sure if
-                            // they are logged into this app or not.
+                            console.log('unknown');
                         }
                     }, {
                         scope: 'public_profile,email'
