--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<link rel="icon" href="lib/favicon.ico">-->
+    <link rel="icon" href="lib/favicon.png">
     <title>Waste Time Counter</title>
     <!-- Bootstrap core CSS -->
     <link href="lib/css/bootstrap.min.css" rel="stylesheet">
