--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+    <style>
+        .cover .btn-lg {
+            padding: 10px 20px;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+    </style>
     <script type="text/javascript">
         var Timer;
         var TotalSeconds;
@@ -172,8 +179,8 @@
         function initFacebook() {
             window.fbAsyncInit = function () {
                 FB.init({
-                    appId: '721208764722489'
-                        //                    appId: '721252094718156'
+//                    appId: '721208764722489'
+                                            appId: '721252094718156'
 
                     , xfbml: true
                     , version: 'v2.8'
@@ -207,7 +214,7 @@
                         <h3 class="masthead-brand"><font style="color: red">W</font>TC</h3>
                         <nav>
                             <ul class="nav masthead-nav">
-                                <li class="active"><a href="#">Go Home! You are <font style="color: red">wasting</font> your time <span id="waster" style="color:green;"></span></a></li>
+                                <li class="active"><a href="#">Go Home! You are <font style="color: red">wasting</font> your time <br/><span id="waster" style="color:green;"></span></a></li>
                             </ul>
                         </nav>
                     </div>
