--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <script>
         window.fbAsyncInit = function () {
             FB.init({
-                appId: '721208764722489'
-//                appId: '721252094718156'
+//                appId: '721208764722489'
+                appId: '721252094718156'
                 , xfbml: true
                 , version: 'v2.8'
             });
@@ -82,8 +82,7 @@
                 <div class="inner cover">
                     <h1 class="cover-heading"><font style="color: red">Waste</font> Time Counter.</h1>
                     <p class="lead">Let's <font style="color: red">waste</font> together!</p>
-                    <p>Number Of <font style="color: red">Wasters</font></p>
-                    <p id="wastersCount" style="color:white;font-size: 16px;">1</p>
+                    <p>Time is going <span id="wastersCount" style="color:white;font-size: 16px;">1x</span> faster                
                     <div class="row">
                         <p id="timer" style="font-size: 26px;">TIMER</p>
                     </div>
